--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "servers.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src"
+    "start": "nodemon ./src/server"
   },
   "author": "",
   "license": "ISC",
